# ot-harjoitus

./: .env  .env.test  README.md  pyproject.toml  pytest.ini  tasks.py
data/: questions.tsv  team_names.csv
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
files/: high_scores.csv  questions.csv  team_names.csv
laskarit/: gitlog.txt
laskarit/viikko1/: komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko3/: luokkakaavio1.md  luokkakaavio2.md  sekvenssikaavio1.md  sekvenssikaavio2.md
src/: config.py  index.py
src/repositories/: high_score_repository.py  high_scores.py  question_repository.py  questions.py
src/services/: question_service.py  questions_service.py  score_service.py
src/tests/: ui_test.py
src/tests/repositories/: high_score_repository_test.py  high_scores_test.py  question_repository_local_test.py  question_repository_online_test.py  question_repository_test.py  questions_test.py
src/tests/services/: high_score_service_test.py  question_service_test.py  service_test.py
src/ui/: base_view.py  button_styles.py  gameplay_view.py  high_score_view.py  intro_view.py  main_menu_view.py  new_game_view.py  quit_view.py  rules_view.py  ui.py  view_manager.py  widget_creator.py
src/ui/utilities/: base_frame.py  button_styles.py  widget_creator.py  widget_styles.py
src/ui/views/: completed_view.py  error_view.py  gameplay_view.py  high_score_view.py  intro_view.py  main_menu_view.py  new_game_view.py  quit_view.py  rules_view.py
(+3 files in other folders)
