[tool.poetry]
name = "ot-harjoitus"
version = "0.1.0"
description = ""
authors = ["Daniel Purssila <daniel.purssila@helsinki.fi>"]
readme = "README.md"
packages = [{include = "ot_harjoitus"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
